# HW_28_Django-master

./: pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ads_image.py  0003_alter_ads_image.py  0004_alter_ads_image.py
ads/urls/: ads.py
datasets/: ads.json  csv_to_json.py
djangoProject_27/: settings.py  urls.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
users/urls/: user.py
